--- a/todolist/package.json
+++ b/todolist/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "@material/animation": "^11.0.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-masked-view/masked-view": "^0.2.4",
     "@react-navigation/native": "^6.0.0-next.13",
@@ -10,6 +13,7 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "material-components-web": "^11.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-native": "^0.64.1",
@@ -44,5 +48,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "css-loader": "^5.2.6",
+    "extract-loader": "^5.1.0",
+    "file-loader": "^6.2.0",
+    "sass": "^1.34.1",
+    "sass-loader": "^12.0.0"
   }
 }
