--- a/todolist/package.json
+++ b/todolist/package.json
@@ -13,8 +13,10 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^4.6.0",
     "material-components-web": "^11.0.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-native": "^0.64.1",
     "react-native-gesture-handler": "^1.10.3",
