--- a/todolist/package.json
+++ b/todolist/package.json
@@ -15,6 +15,8 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^4.6.0",
     "material-components-web": "^11.0.0",
+    "mdb-ui-kit": "^3.6.0",
+    "mdbreact": "^5.0.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
@@ -24,7 +26,10 @@
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.3.0",
     "react-native-web": "^0.16.3",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "startbootstrap-simple-sidebar": "^6.0.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
